--- a/main.html
+++ b/main.html
@@ -8,7 +8,41 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+    <form method="post">
+  <label for="name">Name*</label>
+  <input type="text" id="name" name="name" required>
+
+  <label for="email">Email*</label>
+  <input type="email" id="email" name="email" required>
+
+  <label for="gender">Gender*</label>
+  <div id="gender">
+    <label for="male">Male</label>
+    <input type="radio" id="male" name="gender" required>
+    <label for="female">Female</label>
+    <input type="radio" id="female" name="gender" required>
+  </div>
+
+  <label for="cars">Car Brands</label>
+  <select id="cars" name="carBrand">
+    <option value="BMW">BMW</option>
+    <option value="Audi">Audi</option>
+    <option value="Mercedes">Mercedes</option>
+  </select>
+
+  <label for="carage">Car Age*</label>
+  <input type="text" id="carage" name="carAge" required>
+
+  <label for="dop">Date of Purchase (DOP)*</label>
+  <input type="text" id="dop" name="dateOfPurchase" required>
+
+  <label for="password">Password*</label>
+  <input type="password" id="password" name="password" required>
+
+  <button type="submit">Submit</button>
+</form>
+
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
